<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/leagueName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_17_dp"
        android:textSize="@dimen/size_24_sp"
        android:textColor="@android:color/black"
        android:gravity="center_vertical"
        android:drawablePadding="@dimen/padding_17_dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="League name" />

    <TextView
        android:id="@+id/seasonYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/padding_17_dp"
        android:textSize="@dimen/size_14_sp"
        android:textColor="@android:color/black"
        android:gravity="center_vertical"
        android:drawablePadding="@dimen/padding_17_dp"
        app:layout_constraintTop_toBottomOf="@id/leagueName"
        tools:text="Season 2021" />

    <TextView
        android:id="@+id/teamRankTitle"
        android:layout_width="@dimen/padding_50_dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_15_dp"
        android:textSize="@dimen/size_14_sp"
        android:textColor="@android:color/black"
        android:gravity="center_horizontal"
        android:drawablePadding="@dimen/padding_17_dp"
        android:text="@string/table_rank_title"
        app:layout_constraintTop_toBottomOf="@id/seasonYear"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/teamNameTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_15_dp"
        android:textSize="@dimen/size_14_sp"
        android:textColor="@android:color/black"
        android:gravity="start"
        android:drawablePadding="@dimen/padding_17_dp"
        android:text="@string/table_team_name_title"
        app:layout_constraintTop_toBottomOf="@id/seasonYear"
        app:layout_constraintLeft_toRightOf="@id/teamRankTitle"
        app:layout_constraintRight_toLeftOf="@id/gamesPlayedTitle"/>

    <TextView
        android:id="@+id/gamesPlayedTitle"
        android:layout_width="@dimen/padding_50_dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_15_dp"
        android:textSize="@dimen/size_14_sp"
        android:textColor="@android:color/black"
        android:gravity="start"
        android:drawablePadding="@dimen/padding_17_dp"
        android:text="@string/table_played_games_title"
        app:layout_constraintTop_toBottomOf="@id/seasonYear"
        app:layout_constraintLeft_toRightOf="@id/teamNameTitle"
        app:layout_constraintRight_toLeftOf="@id/goalsDifferent"/>

    <TextView
        android:id="@+id/goalsDifferent"
        android:layout_width="@dimen/padding_50_dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_15_dp"
        android:textSize="@dimen/size_14_sp"
        android:textColor="@android:color/black"
        android:gravity="start"
        android:drawablePadding="@dimen/padding_17_dp"
        android:text="@string/table_goals_different_title"
        app:layout_constraintTop_toBottomOf="@id/seasonYear"
        app:layout_constraintLeft_toRightOf="@id/gamesPlayedTitle"
        app:layout_constraintRight_toLeftOf="@id/teamPointsTitle"/>


    <TextView
        android:id="@+id/teamPointsTitle"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_15_dp"
        android:textSize="@dimen/size_14_sp"
        android:textColor="@android:color/black"
        android:gravity="start"
        android:drawablePadding="@dimen/padding_17_dp"
        android:text="@string/table_points_title"
        app:layout_constraintTop_toBottomOf="@id/seasonYear"
        app:layout_constraintLeft_toRightOf="@id/goalsDifferent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/standing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_17_dp"
        app:layout_constraintTop_toBottomOf="@id/teamRankTitle"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>